--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <img src="https://pbs.twimg.com/profile_images/1257742666957291521/Yy_8jk0W_400x400.jpg" alt="odin">
+    <h2>The God Odin's most favourite recipes here for you:</h2>
     <ul>
     <li><a href="./recipes/pizza.html">Pizza</a></li>
     <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
