--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="https://pbs.twimg.com/profile_images/1257742666957291521/Yy_8jk0W_400x400.jpg" alt="odin">
-    <h2>The God Odin's most favourite recipes here for you:</h2>
+    <h1 class="common">Odin Recipes</h1>
+    <img class="center" src="https://pbs.twimg.com/profile_images/1257742666957291521/Yy_8jk0W_400x400.jpg" alt="odin">
+    <h2 class="common h2">The God Odin's most favourite recipes here for you:</h2>
     <ul>
     <li><a href="./recipes/pizza.html">Pizza</a></li>
     <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
